--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Davide Zufacchi"
-  avatar           : "images/Volterrasmall.png"
+  avatar           : "Volterrasmall.png"
   bio              : "Economics PhD student at University College London and Institute of Fiscal Studies"
   location         : "Location"
   employer         :
