--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Davide Zufacchi"
   avatar           : "Volterrasmall.png"
   bio              : "Economics PhD student at University College London and Institute of Fiscal Studies"
-  location         : "30 Gordon Street, London WC1H 0AX, United Kingdom"
+  location         : "30 Gordon Street, London"
   employer         :
   pubmed           : 
   googlescholar    : 
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@DavideZufacchi"
+  twitter          : "@Davide_Zufacchi"
   vine             :
   weibo            :
   xing             :
