--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Davide Zufacchi"
-  avatar           : "Volterrasmall.png"
+  avatar           : "Montilattari mini"
   bio              : "Economics PhD student at University College London and Institute of Fiscal Studies"
   location         : "30 Gordon Street, London"
   employer         :
