--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ social:
 analytics:
   provider               :  "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : "G-PRTBGTP2K7"
 
 
 # Site Author
