--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Davide Zufacchi"
   avatar           : "camiciareduced.jpg"
-  bio              : "Economics PhD student at University College London and Institute of Fiscal Studies"
+  bio              : 
   location         : "30 Gordon Street, London"
   employer         :
   pubmed           : 
