--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Davide Zufacchi"
-  avatar           : "pic_market2.jpg"
+  avatar           : "pic_market2.JPG"
   bio              : " "
   location         : "30 Gordon Street, London"
   employer         :
