--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ author:
   name             : "Davide Zufacchi"
   avatar           : "camiciareduced.jpg"
   bio              : " "
-  location         : "30 Gordon Street, London"
-  employer         :
+  location         : "30 Gordon Street"
+  employer         : "University College London"
   pubmed           : 
   googlescholar    : 
   email            : "davide.zufacchi@outlook.it"
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "DavideZufacchi"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
@@ -110,7 +110,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@Davide_Zufacchi"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
