Update author location and clear employer field

--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ author:
   name             : "Davide Zufacchi"
   avatar           : "camiciareduced.jpg"
   bio              : " "
-  location         : "30 Gordon Street"
-  employer         : "University College London"
+  location         : "30 Gordon Street, London"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            : "davide.zufacchi@outlook.it"
